tests/NormalTests/paczka1/fuzzy1/93028784.err
Error in line 3: UKgwmjuH S609 19,6
Error in line 9: wIPGr S72 53,76
Error in line 21: wIPGr A765 50,6
